Opened 14 years ago
Closed 14 years ago
#2065 closed defect (fixed)
ADPCM_MS audio duration is incorrect
| Reported by: | Dennis | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | regression wav |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
The duration of an ADPCM_MS file is incorrectly reported. FFmpeg reports a duration of 24:51:18.49 for this file when it should be 2:00 (2 minutes).
How to reproduce:
ffmpeg -i radio-header.wav
ffmpeg version N-48065-g6375318 Copyright (c) 2000-2012 the FFmpeg developers
built on Dec 21 2012 09:13:20 with gcc 4.7.2 (GCC)
configuration: --enable-static --arch=x86_64 --target-os=mingw32 --cross-prefi
x=/home/rdp/dev/ffmpeg-windows-build-helpers/sandbox/mingw-w64-x86_64/bin/x86_64
-w64-mingw32- --pkg-config=pkg-config --enable-gpl --enable-libx264 --enable-avi
synth --enable-libxvid --enable-libmp3lame --enable-version3 --enable-zlib --ena
ble-librtmp --enable-libvorbis --enable-libtheora --enable-libspeex --enable-lib
openjpeg --enable-gnutls --enable-libgsm --enable-libfreetype --enable-fontconfi
g --enable-libass --enable-libutvideo --enable-libopus --disable-w32threads --en
able-frei0r --enable-filter=frei0r --enable-libvo-aacenc --enable-bzlib --enable
-libxavs --extra-cflags=-DPTW32_STATIC_LIB --enable-libopencore-amrnb --enable-l
ibopencore-amrwb --enable-libvo-amrwbenc --enable-libschroedinger --enable-libbl
uray --enable-libvpx --enable-runtime-cpudetect
libavutil 52. 12.100 / 52. 12.100
libavcodec 54. 81.100 / 54. 81.100
libavformat 54. 49.102 / 54. 49.102
libavdevice 54. 3.102 / 54. 3.102
libavfilter 3. 29.100 / 3. 29.100
libswscale 2. 1.103 / 2. 1.103
libswresample 0. 17.102 / 0. 17.102
libpostproc 52. 2.100 / 52. 2.100
[wav @ 000000000225dfe0] max_analyze_duration 5000000 reached at 5002667
Guessed Channel Layout for Input Stream #0.0 : stereo
Input #0, wav, from 'radio-header.wav':
Duration: 24:51:18.49, bitrate: 0 kb/s
Stream #0:0: Audio: adpcm_ms ([2][0][0][0] / 0x0002), 48000 Hz, stereo, s16,
384 kb/s
At least one output file must be specified
Change History (6)
comment:2 by , 14 years ago
| Component: | undetermined → avformat |
|---|---|
| Keywords: | regression added |
| Version: | unspecified → git-master |
comment:3 by , 14 years ago
| Reproduced by developer: | set |
|---|---|
| Status: | new → open |
Regression since 462b262.
comment:4 by , 14 years ago
This is not a bug. The file has a broken header.
The "data" portion reports a size of 0xFFFFFFFF (This is at offset 0x74 of the file), which is being used to calculate the duration of the stream and thus getting such result.
comment:5 by , 14 years ago
The file plays fine in Winamp.
In Winamp, duration is calculated correctly for this and many more samples of this same kind.
comment:6 by , 14 years ago
| Keywords: | wav added |
|---|---|
| Resolution: | → fixed |
| Status: | open → closed |
Fixed by James Almer.



File:
http://www.djxmmx.net/ffmpeg/2064/radio-header.wav